--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-actions-sheet": "^0.9.7",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "react-native-svg": "^15.11.1",
-    "react-native-reanimated": "~3.16.1"
+    "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
