--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.76.6",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
