--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.27",
+    "expo-file-system": "^18.0.12",
+    "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-sqlite": "^15.0.6",
     "expo-status-bar": "~2.0.1",
@@ -26,8 +28,11 @@
     "react-native": "0.76.6",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.2.0",
     "react-native-paper": "^5.13.1",
+    "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
