--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@shopify/react-native-skia": "^1.12.3",
+    "d3": "^7.9.0",
+    "d3-shape": "^3.2.0",
     "expo": "~52.0.27",
     "expo-file-system": "^18.0.12",
     "expo-image-picker": "^16.0.6",
@@ -27,7 +30,10 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-actions-sheet": "^0.9.7",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^8.2.0",
@@ -36,7 +42,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "react-native-svg": "^15.11.1"
+    "react-native-svg": "^15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
