--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,21 +14,23 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "@shopify/react-native-skia": "^1.12.3",
+    "@shopify/react-native-skia": "1.5.0",
     "d3": "^7.9.0",
     "d3-shape": "^3.2.0",
-    "expo": "~52.0.27",
+    "expo": "~52.0.46",
     "expo-file-system": "^18.0.12",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "~14.0.2",
-    "expo-sqlite": "^15.0.6",
+    "expo-location": "~18.0.10",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "~12.0.6",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
@@ -37,12 +39,13 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^8.2.0",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
-    "react-native-svg": "^15.11.2"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
